Trimmed fix for bug #9546 (Crashing with huge decimals)

mysql-test/r/type_newdecimal.result:
  test result fixed
mysql-test/t/type_newdecimal.test:
  test case added
sql/my_decimal.cc:
  error message fixed
strings/decimal.c:
  do_add function fixed